Fix Java 8 compatibility in Range function
- Replace .toList() with .collect(Collectors.toList()) for Java 8 compatibility
- Add java.util.stream.Collectors import
- Function continues to work correctly in Java 8 environments

Fixes compilation error: cannot find symbol .toList()